<resources>
    <!--    <string name="app_name">Ambarrukmo</string>-->
    <string name="skip">Skip</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="register">register</string>
    <string name="login">login</string>
    <string name="title">Hi, please fill this field</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="i_agree">I agree</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="and">and</string>
    <string name="privacy_police">Privacy Police</string>
    <string name="todo">TODO</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="home">Home</string>
    <string name="valet">Valet</string>
    <string name="map">Map</string>
    <string name="member">Member</string>
    <string name="setting">Setting</string>

    <!--    slide   -->
    <string name="title1">Selamat Datang</string>
    <string name="title2">Kenyamanan dan kemudahan</string>
    <string name="title3">Promo dan Hadiah</string>

    <string name="desc1">Step 1 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry</string>
    <string name="desc2">Step 2 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry</string>
    <string name="desc3">Step 3 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_point">My Point</string>
    <string name="fashion_accessories"><![CDATA[Fashion & Accessories]]></string>
    <string name="close">close</string>
    <string name="open">open</string>
    <string name="dining">Dining</string>
    <string name="search_do_you_want_if">Search do you Want if</string>
    <string name="highlight">Highlight</string>
    <string name="my_profile">My Profile</string>

    <string-array name="floor">
        <item>LG</item>
        <item>GF</item>
        <item>L1</item>
        <item>L2</item>
        <item>L3</item>
        <item>L3A</item>
    </string-array>
</resources>