<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.LoginActivity"
    android:background="@drawable/img_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_background"
        android:layout_marginHorizontal="@dimen/_25sdp"
        android:layout_marginVertical="@dimen/_50sdp"
        android:elevation="@dimen/_1sdp"
        android:padding="20dp">

        <ImageView
            android:id="@+id/image_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/todo" />

        <ImageView
            android:id="@+id/image_logo_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_logo_ss"
            android:layout_centerHorizontal="true"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_25sdp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_input_nohp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/image_logo_login"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/_30sdp"
            app:boxBackgroundColor="@color/grey"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="39dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_nohp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="No. Telpon"
                android:inputType="number"
                android:textColor="@color/black"
                android:textSize="14dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_input_nohp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/_10sdp"
            app:boxBackgroundColor="@color/grey"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="39dp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="14dp" />
        </com.google.android.material.textfield.TextInputLayout>


        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_input_password"
            android:layout_marginTop="10dp"
            android:text="Remember me"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_input_password"
            android:text="@string/forgot_password"
            android:textColor="@color/blue_air"
            android:layout_marginTop="@dimen/_18sdp"
            android:layout_alignParentEnd="true"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_45sdp"
            android:backgroundTint="@color/brown"
            android:text="@string/login"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/layout_input_password"
            android:layout_marginTop="@dimen/_50sdp"/>
        <View
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/grey"
            android:layout_below="@+id/btn_login"
            android:layout_marginTop="@dimen/_20sdp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/view"
            android:src="@drawable/ic_facebook"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:contentDescription="@string/todo" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/view"
            android:layout_marginTop="@dimen/_40sdp"
            android:src="@drawable/ic_google_plus"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/todo" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/view"
            android:layout_marginTop="@dimen/_40sdp"
            android:src="@drawable/ic_twitter"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/_20sdp"
            android:contentDescription="@string/todo" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>