<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.RegisterActivity"
    android:background="@drawable/img_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_background"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginVertical="@dimen/_50sdp"
        android:elevation="@dimen/_1sdp"
        android:padding="20dp">

        <ImageView
            android:id="@+id/image_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_25sdp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_input_first"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_title"
            android:layout_marginTop="@dimen/_20sdp"
            app:boxBackgroundColor="@color/grey"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="39dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_first"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="First name"
                android:textColorHint="@color/grey"
                android:textColor="@color/black"
                android:textSize="14dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_input_last"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_title"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/_20sdp"
            app:boxBackgroundColor="@color/grey"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="39dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_last"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Last name"
                android:textColor="@color/black"
                android:textSize="14dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_input_last"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/_10sdp"
            app:boxBackgroundColor="@color/grey"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="39dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textSize="14dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_input_nohp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_input_email"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/_10sdp"
            app:boxBackgroundColor="@color/grey"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="39dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_nohp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="No. Telpon"
                android:inputType="number"
                android:textColor="@color/black"
                android:textSize="14dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_input_nohp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/_10sdp"
            app:boxBackgroundColor="@color/grey"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="39dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="14dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_input_cpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_input_password"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/_10sdp"
            app:boxBackgroundColor="@color/grey"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="39dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_cpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Confirm Password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="14dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="I agree"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp"
            android:layout_below="@id/layout_input_cpassword"
            android:layout_marginTop="@dimen/_10sdp"/>

        <TextView
            android:id="@+id/text_condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_input_cpassword"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_23sdp"
            android:layout_toEndOf="@+id/checkbox"
            android:text="Term &amp; Condition"
            android:textColor="@color/blue_air"
            android:textSize="@dimen/_10sdp" />

        <TextView
            android:id="@+id/text_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_input_cpassword"
            android:layout_marginTop="@dimen/_23sdp"
            android:layout_toEndOf="@+id/text_condition"
            android:text="end"
            android:layout_marginStart="@dimen/_5sdp"
            android:textSize="@dimen/_10sdp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/text_police"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_input_cpassword"
            android:layout_marginTop="@dimen/_23sdp"
            android:layout_toEndOf="@+id/text_end"
            android:text="Privacy Police"
            android:layout_marginStart="@dimen/_5sdp"
            android:textSize="@dimen/_10sdp"
            android:textColor="@color/blue_air"/>

            <Button
                android:id="@+id/btn_register"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_45sdp"
                android:backgroundTint="@color/brown"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/register"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/checkbox"/>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>